--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ py-tgcalls==2.0.1
 ntgcalls==1.2.3
 python-dotenv==1.0.0
 tgcrypto==1.2.5
-youtube-search-python
+youtube-search-python==1.6.6
 yt-dlp==2023.12.30
+httpx==0.27.2
