--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
-certifi
-aiofiles==23.2.1
-aiohttp==3.9.3
-asyncio==3.4.3
-pyrogram==2.0.106
-py-tgcalls==2.0.1
-ntgcalls==1.2.3
-python-dotenv==1.0.0
-tgcrypto==1.2.5
-youtube-search-python==1.6.6
-yt-dlp==2023.12.30
+selenium
+chromedriver-autoinstaller
+pyyaml
+aiofiles
+aiohttp
+beautifulsoup4
+dnspython
+ffmpeg-python
+gitpython
+hachoir
+heroku3
 httpx==0.27.2
+motor==3.3.1
+numpy==1.26.4
+opencv-python==4.10.0.84
+pillow==10.4.0
+psutil
+tgcrypto
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+py-tgcalls==2.2.0
+pykeyboard
+python-dotenv
+requests
+speedtest-cli
+spotipy
+unidecode
+uvloop; sys_platform != 'win32'
+yt-dlp
+youtube-search
+youtube-search-python
+certifi
