--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pillow==10.4.0
 psutil
 tgcrypto==1.2.3
 pyrogram==1.4.16
-pytgcalls==0.9.7
+git+https://github.com/pytgcalls/pytgcalls@v0.9.7
 pykeyboard
 python-dotenv
 requests
