--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,40 @@
-selenium
-chromedriver-autoinstaller
-pyyaml
+# Core dependencies
+pyrogram==2.1.23
+tgcrypto
+pytgcalls==3.0.0.dev24
+python-dotenv
 aiofiles
 aiohttp
-beautifulsoup4
-dnspython
+uvloop; sys_platform != 'win32'
+
+# Media processing
+yt-dlp
 ffmpeg-python
-gitpython
-hachoir
-heroku3
-httpx==0.27.2
-motor==3.3.1
-numpy==1.26.4
 opencv-python==4.10.0.84
 pillow==10.4.0
-psutil
-tgcrypto==1.2.3
-pyrogram==1.4.16
-py-tgcalls
-pykeyboard
-python-dotenv
+numpy==1.26.4
+hachoir
+
+# Web / Scraping
 requests
+beautifulsoup4
+httpx==0.27.2
+dnspython
 speedtest-cli
 spotipy
 unidecode
-uvloop; sys_platform != 'win32'
-yt-dlp
-youtube-search
-youtube-search-python
+selenium
+chromedriver-autoinstaller
+
+# Database
+motor==3.3.1
+
+# Git / Heroku
+gitpython
+heroku3
+
+# Certificates & SSL
 certifi
+
+# Optional: Keyboard / User interaction
+pykeyboard
