--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,20 @@
-# Core dependencies
+# Core libraries
 pyrogram==2.0.106
-tgcrypto
-pytgcalls==3.0.0.dev24
-python-dotenv
-aiofiles
-aiohttp
-uvloop; sys_platform != 'win32'
+tgcrypto==1.2.4
+python-dotenv==1.0.0
+
+# PyTgCalls stable version
+pytgcalls[pyrogram]==2.1.0
 
 # Media processing
-yt-dlp
-ffmpeg-python
-opencv-python==4.10.0.84
-pillow==10.4.0
-numpy==1.26.4
-hachoir
+yt-dlp==2025.9.6
+pillow==10.1.0
+aiohttp==3.9.5
+aiofiles==23.2.1
 
-# Web / Scraping
-requests
-beautifulsoup4
-httpx==0.27.2
-dnspython
-speedtest-cli
-spotipy
-unidecode
-selenium
-chromedriver-autoinstaller
+# YouTube search
+youtube-search-python==1.7.9
 
-# Database
-motor==3.3.1
-
-# Git / Heroku
-gitpython
-heroku3
-
-# Certificates & SSL
+# Optional downloader library (if needed)
+downloader==1.0.4
 certifi
-
-# Optional: Keyboard / User interaction
-pykeyboard
