--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
-# Core libraries
+# Core Telegram clients
 pyrogram==2.0.106
 tgcrypto==1.2.4
+
+# Audio/Video streaming
+pytgcalls==2.1.0
+
+# YouTube downloader
+yt-dlp>=2025.9.5
+
+# Utilities
+aiohttp==3.8.5
+aiofiles==23.1.0
 python-dotenv==1.0.0
-
-# PyTgCalls stable version
-pytgcalls[pyrogram]==2.1.0
-
-# Media processing
-yt-dlp==2025.9.6
-pillow==10.1.0
-aiohttp==3.9.5
-aiofiles==23.2.1
-
-# YouTube search
-youtube-search-python==1.7.9
-
-# Optional downloader library (if needed)
-downloader==1.0.4
-certifi
+pillow==10.0.1
