--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-# Core Telegram clients
+aiofiles==23.2.1
+aiohttp==3.9.3
+asyncio==3.4.3
 pyrogram==2.0.106
-tgcrypto==1.2.4
-
-# Audio/Video streaming (PyTgCalls v3, PyPI-only)
-pytgcalls==3.0.0.dev6
-
-# YouTube downloader
-yt-dlp>=2024.12.26
-
-# Utilities
-aiohttp==3.8.5
-aiofiles==23.1.0
+py-tgcalls==2.0.1
+ntgcalls==1.2.3
 python-dotenv==1.0.0
-pillow==10.0.1
+tgcrypto==1.2.5
+youtube-search-python
+yt-dlp==2023.12.30
