--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 aiofiles==23.2.1
 aiohttp==3.9.3
-asyncio==3.4.3
+# asyncio is part of Python stdlib, you don't need to install separately (remove it)
 pyrogram==2.0.106
 py-tgcalls==2.0.1
 ntgcalls==1.2.3
 python-dotenv==1.0.0
 tgcrypto==1.2.5
-youtube-search-python
+youtube-search-python==1.6.6
 yt-dlp==2023.12.30
+httpx==0.27.0  
