--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-yt-dlp
+yt-dlp==2023.12.30
 aiofiles==23.2.1
 aiohttp==3.9.3
-# asyncio is part of Python stdlib, you don't need to install separately (remove it)
 pyrogram==2.0.106
-py-tgcalls>=0.9.7
-ntgcalls==1.2.3
+git+https://github.com/pytgcalls/pytgcalls@v3.0.0.dev6  # ensures AudioPiped/VideoPiped exist
 python-dotenv==1.0.0
 tgcrypto==1.2.5
 youtube-search-python==1.6.6
-yt-dlp==2023.12.30
-httpx==0.27.0  
+httpx==0.27.0
 certifi
