--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ yt-dlp==2023.12.30
 aiofiles==23.2.1
 aiohttp==3.9.3
 pyrogram==2.0.106
-git+https://github.com/pytgcalls/pytgcalls@v3.0.0.dev6  # ensures AudioPiped/VideoPiped exist
+git+https://github.com/pytgcalls/pytgcalls@v2.4.2
 python-dotenv==1.0.0
 tgcrypto==1.2.5
 youtube-search-python==1.6.6
 httpx==0.27.0
-certifi
+certifi==2025.7.22
