--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ yt-dlp==2023.12.30
 youtube-search-python==1.6
 
 # AAB NHI HUA TOH ZERATHOS RANDI 
-git+https://github.com/pytgcalls/pytgcalls@dev
+git+https://github.com/pytgcalls/pytgcalls@v3.0.0.dev21
