--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ aiohttp==3.9.3
 yt-dlp==2023.12.30
 youtube-search-python==1.6
 
-# AAB NHI HUA TOH ZERATHOS RANDI 
-git+https://github.com/pytgcalls/pytgcalls@dev
+git+https://github.com/pytgcalls/pytgcalls@v3.0.0.dev6
+
