--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ aiohttp==3.9.3
 yt-dlp==2023.12.30
 youtube-search-python==1.6
 
-git+https://github.com/pytgcalls/pytgcalls@dev
+pytgcalls==3.0.0.dev6
 
