--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ aiohttp==3.9.3
 yt-dlp==2023.12.30
 youtube-search-python==1.6
 
-pytgcalls==3.0.0.dev6
-tgcalls==3.0.0.dev2
+# Pull latest dev branch directly from GitHub
+git+https://github.com/pytgcalls/pytgcalls@dev#egg=pytgcalls
